// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiButtonIcon is rendered 1`] = `
<button
  aria-label="aria-label"
  class="euiButtonIcon testClass1 testClass2 emotion-euiButtonIcon-xs-empty-primary-euiTestCss"
  data-test-subj="test subject string"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props color accent is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon emotion-euiButtonIcon-xs-empty-accent"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props color accentSecondary is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon emotion-euiButtonIcon-xs-empty-accentSecondary"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props color danger is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon emotion-euiButtonIcon-xs-empty-danger"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props color neutral is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon emotion-euiButtonIcon-xs-empty-neutral"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props color primary is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon emotion-euiButtonIcon-xs-empty-primary"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props color risk is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon emotion-euiButtonIcon-xs-empty-risk"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props color success is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon emotion-euiButtonIcon-xs-empty-success"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props color text is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props color warning is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon emotion-euiButtonIcon-xs-empty-warning"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props display base is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon emotion-euiButtonIcon-xs-base-primary"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props display empty is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon emotion-euiButtonIcon-xs-empty-primary"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props display fill is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon emotion-euiButtonIcon-xs-fill-primary"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props href secures the rel attribute when the target is _blank 1`] = `
<a
  aria-label="button"
  class="euiButtonIcon emotion-euiButtonIcon-xs-empty-primary"
  href="#"
  rel="noopener noreferrer"
  target="_blank"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</a>
`;

exports[`EuiButtonIcon props iconType is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon emotion-euiButtonIcon-xs-empty-primary"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props isDisabled is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon emotion-euiButtonIcon-xs-empty-disabled-isDisabled"
  disabled=""
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props isDisabled or disabled is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon emotion-euiButtonIcon-xs-empty-disabled-isDisabled"
  disabled=""
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props isDisabled renders a button even when href is defined 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon emotion-euiButtonIcon-xs-empty-disabled-isDisabled"
  disabled=""
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props isLoading is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon emotion-euiButtonIcon-xs-empty-disabled-isDisabled"
  disabled=""
  type="button"
>
  <span
    aria-label="Loading"
    class="euiLoadingSpinner emotion-euiLoadingSpinner-m"
    role="progressbar"
    style="border-color: #1750ba currentcolor currentcolor currentcolor;"
  />
</button>
`;

exports[`EuiButtonIcon props isSelected is rendered as false 1`] = `
<button
  aria-label="button"
  aria-pressed="false"
  class="euiButtonIcon emotion-euiButtonIcon-xs-empty-primary"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props isSelected is rendered as true 1`] = `
<button
  aria-label="button"
  aria-pressed="true"
  class="euiButtonIcon emotion-euiButtonIcon-xs-empty-primary"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props size m is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon emotion-euiButtonIcon-m-empty-primary"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props size s is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon emotion-euiButtonIcon-s-empty-primary"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;

exports[`EuiButtonIcon props size xs is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon emotion-euiButtonIcon-xs-empty-primary"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    color="inherit"
    data-euiicon-type="user"
  />
</button>
`;
